--- a/xbox/xbox.html
+++ b/xbox/xbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/GameShare/xbox/xbox.css">
+    <link rel="stylesheet" href="/xbox/xbox.css">
     <title>Jogos de PlayStation</title>
 </head>
 <body>
@@ -14,7 +14,6 @@
             <li><a href="/GameShare/index.html">Início</a></li>
             <li><a href="/GameShare/login/login.html">Login</a></li>
             <li><a href="/GameShare/contato/contato.html">Contato</a></li>
-            <li><a href="/GameShare/carrinho/carrinho.html">Quem somos</a></li>
         </ul>
     </nav>
             <h1>GameShare</h1>
