--- a/xbox/xbox.html
+++ b/xbox/xbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/xbox/xbox.css">
+    <link rel="stylesheet" href="xbox/xbox.css">
     <title>Jogos de PlayStation</title>
 </head>
 <body>
