--- a/xbox/xbox.html
+++ b/xbox/xbox.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="xbox.css">
-    <title>Jogos de PlayStation</title>
+    <title>Jogos de Xbox</title>
 </head>
 <body>
 
