--- a/xbox/xbox.html
+++ b/xbox/xbox.html
@@ -88,8 +88,8 @@
     </div>
 </div>
 
-<script src="/aluguel/aluguel.js"></script>
-<script src="/script.js"></script>
+<script src="/GameShare/aluguel/aluguel.js"></script>
+<script src="/GameShare/aluguel/script.js"></script>
 
 </body>
 </html>
