--- a/playstantion/playstantion.html
+++ b/playstantion/playstantion.html
@@ -25,55 +25,55 @@
 <div class="page-container">
     <div class="game-container">
         <div class="game" onclick="RedirecioneAluguelUrl('FC 24', '/GameShare/playstantion/imagens play/fifa.avif', 'FC 24, a mais recente adição à renomada série de jogos de futebol, redefine a experiência do esporte rei. Com gráficos deslumbrantes e jogabilidade aprimorada, mergulhe em campos de alta fidelidade e torneios emocionantes. Controle seus jogadores favoritos com uma precisão incrível, explore modos de carreira envolventes e participe de desafios online para provar suas habilidades. FIFA 24 oferece uma imersão única, destacando-se pela autenticidade, desde as animações fluidas até as vibrações da torcida. Prepare-se para vivenciar o futebol em um nível completamente novo.', 5.99)">
-            <img src="/Gameshare/playstantion/imagens play/fifa.avif" alt="FIFA 24">
+            <img src="/GameShare/playstantion/imagens play/fifa.avif" alt="FIFA 24">
             <div class="game-info">
                 <h3>FC 24</h3>
                 <p>Preço: R$ 5,99</p>
             </div>
           </div>
         <div class="game" onclick="RedirecioneAluguelUrl('Assassins Creed - Mirage','/GameShare/playstantion/imagens play/assassins.avif','A história de Basim, um ladrão perspicaz, se desdobra nas movimentadas ruas de Bagdá do século IX. Em busca de respostas e justiça, ele se envolve com uma misteriosa organização chamada Ocultos. Através dessa aliança, Basim se transforma em um Mestre Assassino letal, moldando seu destino de maneiras inimagináveis. As agitadas paisagens urbanas e a intriga histórica proporcionam o cenário perfeito para uma jornada repleta de reviravoltas.',5.99)">
-            <img src="/Gameshare/playstantion/imagens play/assassins.avif">             
+            <img src="/GameShare/playstantion/imagens play/assassins.avif">             
             <div class="game-info">
                 <h3>Assassins creed mirage</h3>
                 <p>Preço: R$ 5,99</p>
             </div>
         </div>
         <div class="game" onclick="RedirecioneAluguelUrl('Spider-Man 2','/GameShare/playstantion/imagens play/spider man.avif','Os icônicos Spider-Men, Peter Parker e Miles Morales, retornam para uma emocionante aventura no universo Marvels Spider-Man para PS5. Com as inovadoras Asas de Teia, explore a vasta Nova York da Marvel, alternando entre os dois heróis para vivenciar histórias únicas e desbloquear poderes épicos. Enquanto enfrentam o perigoso vilão Venom, a vida deles, de seus entes queridos e da cidade inteira está em jogo. Prepare-se para balançar, saltar e planar nesta eletrizante jornada.',5.99)">
-            <img src="/Gameshare/playstantion/imagens play/spider man.avif">
+            <img src="/GameShare/playstantion/imagens play/spider man.avif">
             <div class="game-info">
                 <h3>Spider-Man 2</h3>
                 <p>Preço: R$ 5,99</p>
             </div>
         </div>
         <div class="game" onclick="RedirecioneAluguelUrl('Days Gone','/GameShare/playstantion/imagens play/days gone.webp','Days Gone é um jogo de ação e aventura ambientado em um mundo pós-apocalíptico infestado por zumbis. Os jogadores assumem o papel de Deacon St. John, um motociclista e caçador de recompensas, enquanto ele navega por um ambiente vasto e perigoso. A trama envolve a busca por sua esposa desaparecida, enfrentando não apenas hordas de zumbis, mas também grupos hostis de sobreviventes. A motocicleta desempenha um papel crucial no jogo, servindo como meio de transporte essencial e elemento estratégico. Com um enredo envolvente e desafios intensos, Days Gone oferece uma experiência cativante no universo pós-apocalíptico.',1.99)">
-          <img src="/Gameshare/playstantion/imagens play/days gone.webp" >
+          <img src="/GameShare/playstantion/imagens play/days gone.webp" >
           <div class="game-info">
               <h3>Days Gone</h3>
               <p>Preço: R$ 1,99</p>
           </div>
       </div>
       <div class="game" onclick="RedirecioneAluguelUrl('God of war - Ragnarok','/GameShare/playstantion/imagens play/gow.webp','God of War: Ragnarok é uma aguardada continuação da aclamada saga que segue Kratos e seu filho Atreus. Ambientado na mitologia nórdica, o jogo promete uma narrativa épica centrada no fim do mundo, o Ragnarok. Kratos e Atreus enfrentarão novos deuses e monstros em sua jornada, enquanto desvendam segredos do passado de Kratos. Com gráficos deslumbrantes e um combate visceral, o jogo promete expandir o universo da franquia, mergulhando os jogadores em uma experiência mitológica e emocionante.',2.50)">
-          <img src="/Gameshare/playstantion/imagens play/gow.webp" >
+          <img src="/GameShare/playstantion/imagens play/gow.webp" >
           <div class="game-info">
               <h3>God of War  Ragnarok</h3>
               <p>Preço: R$ 2,50</p>
           </div>
       </div>
       <div class="game" onclick="RedirecioneAluguelUrl('Hogwarts Legacy','/GameShare/playstantion/imagens play/hogwards.webp','Hogwarts Legacy é um aguardado jogo de ação e aventura no universo de Harry Potter. Ambientado no século XIX, os jogadores assumem o papel de um estudante de Hogwarts que possui a habilidade única de manipular magia. Neste mundo expansivo, os jogadores podem explorar o castelo, descobrir segredos mágicos e interagir com personagens icônicos. A narrativa envolve a descoberta de mistérios e ameaças ao mundo mágico, enquanto os jogadores aprimoram suas habilidades mágicas. Com uma rica ambientação e elementos de RPG, Hogwarts Legacy promete uma experiência imersiva no universo mágico de J.K. Rowling.',3.99)">
-          <img src="/Gameshare/playstantion/imagens play/hogwards.webp" >
+          <img src="/GameShare/playstantion/imagens play/hogwards.webp" >
           <div class="game-info">
               <h3>Hogwarts Legacy</h3>
               <p>Preço: R$ 3,99</p>
           </div>
       </div><div class="game" onclick="RedirecioneAluguelUrl('Horizon Forbbiden West','/GameShare/playstantion/imagens play/horizon.webp','Horizon Forbidden West é a tão aguardada sequência do aclamado jogo de ação e aventura Horizon Zero Dawn. A protagonista Aloy embarca em uma jornada épica para explorar as terras proibidas do oeste, encontrando novas máquinas impressionantes e enfrentando desafios emocionantes. O enredo desvenda mistérios sobre as origens dos seres robóticos e o passado da civilização. Com gráficos deslumbrantes e um vasto mundo aberto, o jogo promete uma experiência envolvente e repleta de descobertas. Horizon Forbidden West combina ação intensa, narrativa cativante e um universo fascinante para os fãs da franquia.',3.50)">
-        <img src="/Gameshare/playstantion/imagens play/horizon.webp">
+        <img src="/GameShare/playstantion/imagens play/horizon.webp">
         <div class="game-info">
             <h3>Horizon Forbbiden West</h3>
             <p>Preço: R$ 3,50</p>
         </div>
     </div>
     <div class="game"  onclick="RedirecioneAluguelUrl('The Last of Us part 2','/GameShare/playstantion/imagens play/the last of us.avif','The Last of Us Part II é uma poderosa continuação do aclamado jogo pós-apocalíptico. A história se desenrola em um mundo devastado por um fungo mortal, acompanhando Ellie em uma jornada intensa de sobrevivência e vingança. O jogo destaca-se pela narrativa envolvente, explorando temas complexos de moralidade e relacionamentos. A jogabilidade aprimorada oferece combates intensos e momentos emocionantes, enquanto os jogadores exploram paisagens desoladas. Com personagens complexos e reviravoltas surpreendentes, The Last of Us Part II é uma experiência impactante e memorável.',2.99)">
-        <img src="/Gameshare/playstantion/imagens play/the last of us.avif">
+        <img src="/GameShare/playstantion/imagens play/the last of us.avif">
         <div class="game-info">
             <h3>The Last of Us part 2</h3>
             <p>Preço: R$ 2,99</p>
@@ -83,5 +83,6 @@
     </div>
 </div>
 <script src="/Gameshare/aluguel/aluguel.js"></script>
+<script src="/GameShare/aluguel/script.js"></script>
 </body>
 </html>
