--- a/xbox/xbox.html
+++ b/xbox/xbox.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div class="game" onclick="RedirecioneAluguelUrl('Halo Infinite','/Gameshare/xbox/imagens xbox/halo infinite.jpg','Halo Infinite traz de volta o lendário Master Chief em uma nova odisséia no anel sagrado. Com um foco renovado na narrativa e no combate inovador, o jogo promete uma experiência intensa e imersiva. Os jogadores explorarão um vasto mundo aberto, enfrentarão novos inimigos e desfrutarão de gráficos de última geração. Com a combinação de elementos familiares e inovações emocionantes, Halo Infinite é uma celebração épica da amada franquia.',3.50)">
+        <div class="game" onclick="RedirecioneAluguelUrl('Halo Infinite','/GameShare/xbox/imagens xbox/halo infinite.jpg','Halo Infinite traz de volta o lendário Master Chief em uma nova odisséia no anel sagrado. Com um foco renovado na narrativa e no combate inovador, o jogo promete uma experiência intensa e imersiva. Os jogadores explorarão um vasto mundo aberto, enfrentarão novos inimigos e desfrutarão de gráficos de última geração. Com a combinação de elementos familiares e inovações emocionantes, Halo Infinite é uma celebração épica da amada franquia.',3.50)">
                 <img src="/GameShare/xbox/imagens xbox/halo infinite.jpg" >
             <div class="game-info">
                 <h3>Halo Infinite</h3>
