--- a/playstantion/playstantion.html
+++ b/playstantion/playstantion.html
@@ -11,9 +11,9 @@
   <header>
     <nav>
         <ul>
-            <li><a href="/Gameshare/index.html">Início</a></li>
-            <li><a href="/Gameshare/login/login.html">Login</a></li>
-            <li><a href="/Gameshare/contato/contato.html">Contato</a></li>
+            <li><a href="/GameShare/index.html">Início</a></li>
+            <li><a href="/GameShare/login/login.html">Login</a></li>
+            <li><a href="/GameShare/contato/contato.html">Contato</a></li>
 
         </ul>
     </nav>
@@ -82,7 +82,9 @@
     
     </div>
 </div>
-<script src="/Gameshare/aluguel/aluguel.js"></script>
+
+<script src="/GameShare/aluguel/aluguel.js"></script>
 <script src="/GameShare/aluguel/script.js"></script>
+
 </body>
 </html>
