--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         </div>
 
-        <script src="/Gameshare/script.js"></script>
+        <script src="/GameShare/script.js"></script>
 
 
         <div class="plataforma">
