--- a/aluguel/aluguel.html
+++ b/aluguel/aluguel.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Gameshare/aluguel/playstantion.css">
+    <link rel="stylesheet" href="/GameShare/aluguel/playstantion.css">
     <title>Aluguel de Jogo</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Gameshare/index.html">Início</a></li>
-                <li><a href="/Gameshare/login/login.html">Login</a></li>
-                <li><a href="/Gameshare/contato/contato.html">Contato</a></li>
-                <li><a href="/Gameshare/carrinho/carrinho.html">Quem somos</a></li>
+                <li><a href="/GameShare/index.html">Início</a></li>
+                <li><a href="/GameShare/login/login.html">Login</a></li>
+                <li><a href="/GameShare/contato/contato.html">Contato</a></li>
             </ul>
         </nav>
         <h1>GameShare</h1>
     </header>
     <div class="redes-sociais">
         <p>Compartilhe-nos em suas redes sociais</p>
-    <img src="/Gameshare/imagens/facebook.png" alt="Compartilhar no Facebook" onclick="compartilharNoFacebook()">
-    <img src="/Gameshare/imagens/twitter.png" alt="Compartilhar no Twitter" onclick="compartilharNoTwitter()">
-    <img src="/Gameshare/imagens/instagram.png" alt="Compartilhar no Instagram" onclick="compartilharNoInstagram()">
+    <img src="/GameShare/imagens/facebook.png" alt="Compartilhar no Facebook" onclick="compartilharNoFacebook()">
+    <img src="/GameShare/imagens/twitter.png" alt="Compartilhar no Twitter" onclick="compartilharNoTwitter()">
+    <img src="/GameShare/imagens/instagram.png" alt="Compartilhar no Instagram" onclick="compartilharNoInstagram()">
     </div>
 
     <!-- Inclua as bibliotecas do Facebook e Twitter SDKs -->
@@ -57,6 +56,6 @@
     <button onclick="calcularPreco()">Calcular Preço</button>
 </div>
 </section>
-<script src="script.js"></script>
+<script src="/GameShare/aluguel/script.js"></script>
 </body>
 </html>
