--- a/contato/contato.html
+++ b/contato/contato.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Gameshare/contato.css">
+    <link rel="stylesheet" href="/GameShare/contato.css">
     <title>Contato</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Gameshare/index.html">Início</a></li>
-                <li><a href="/Gameshare/login/login.html">Login</a></li>
-                <li><a href="/Gameshare/contato/contato.html">Contato</a></li>
-                <li><a href="/Gameshare/carrinho/carrinho.html">Quem somos</a></li>
+                <li><a href="/GameShare/index.html">Início</a></li>
+                <li><a href="/GameShare/login/login.html">Login</a></li>
+                <li><a href="/GameShare/contato/contato.html">Contato</a></li>
             </ul>
         </nav>
         <h1>GameShare</h1>
@@ -26,19 +25,19 @@
         <div class="info-box">
             <h2>Canais de Comunicação</h2>
             <div class="canal">
-                <img src="/Gameshare/contato/imagens/whats.png" alt="WhatsApp Logo">
+                <img src="/GameShare/contato/imagens/whats.png" alt="WhatsApp Logo">
                 <p>(12) 3456-7890</p>
             </div>
             <div class="canal">
-                <img src="/Gameshare/contato/imagens/Insta.webp" alt="Instagram Logo">
+                <img src="/GameShare/contato/imagens/Insta.webp" alt="Instagram Logo">
                 <p>@Game_Share</p>
             </div>
             <div class="canal">
-                <img src="/Gameshare/contato/imagens/Fac.png" alt="Facebook Logo">
+                <img src="/GameShare/contato/imagens/Fac.png" alt="Facebook Logo">
                 <p>Game_Share</p>
             </div>
             <div class="canal">
-                <img src="/Gameshare/contato/imagens/Gog.png  " alt="Email Logo">
+                <img src="/GameShare/contato/imagens/Gog.png  " alt="Email Logo">
                 <p>GameShareAlugueis@gmail.com</p>
             </div>
             
