--- a/login/Cadastro/Cadastro.html
+++ b/login/Cadastro/Cadastro.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Gameshare/cadastro.css">
+    <link rel="stylesheet" href="/GameShare/cadastro.css">
     <title>Cadastro</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/Gameshare/index.html">Início</a></li>
-                <li><a href="/Gameshare/login/login.html">Login</a></li>
-                <li><a href="/Gameshare/contato/contato.html">Contato</a></li>
-                <li><a href="/Gameshare/carrinho/carrinho.html">Quem somos</a></li>
+                <li><a href="/GameShare/index.html">Início</a></li>
+                <li><a href="/GameShare/login/login.html">Login</a></li>
+                <li><a href="/GameShare/contato/contato.html">Contato</a></li>
             </ul>
         </nav>
         <h1>GameShare</h1>
@@ -53,7 +52,7 @@
             <button class="cadastrar-button">Cadastrar</button>
             <p>Já tem uma conta? <a href="/Gameshare/login/login.html">Faça o login</a></p>
         </div>
-        <script src="/Gameshare/cadastro.js"></script>
+        <script src="/GameShare/login/Cadastro/cadastro.js"></script>
     </div>
 </body>
 </html>
