--- a/login/Cadastro/Cadastro.html
+++ b/login/Cadastro/Cadastro.html
@@ -50,7 +50,7 @@
                 <input type="password" id="confirmarSenha" name="confirmarSenha" required>
             </div>
             <button class="cadastrar-button">Cadastrar</button>
-            <p>Já tem uma conta? <a href="/Gameshare/login/login.html">Faça o login</a></p>
+            <p>Já tem uma conta? <a href="/GameShare/login/login.html">Faça o login</a></p>
         </div>
         <script src="/GameShare/login/Cadastro/cadastro.js"></script>
     </div>
