alterações nos slides

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     </div>
 
                     <div class="slide">
-                        <img src="/GameShare/imagens/Sliders Página/Fallout.webp">
+                        <img src="/GameShare/imagens/Sliders Página/Fifa.jpg">
                     </div>
 
                     <div class="slide">
-                        <img src="/GameShare/imagens/Sliders Página/GOD.webp">
+                        <img src="/GameShare/imagens/Sliders Página/god of war.webp">
                     </div>
 
                     <div class="slide">
